# DECHO

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OneKeyStart.bat  README.md  README_RUN.md  activate.ps1  app.py  config.example.yaml  config.yaml  decho-server.spec  main.py  package-lock.json  pyproject.toml  run.ps1
backend/: asr.py  audio_generation.py  audio_io.py  audio_processing.py  cleaning.py  exceptions.py  llm.py  nlp.py  subtitle.py  utils.py
backend/spacy_utils/: __init__.py  load_nlp_model.py  split_by_comma.py  split_by_connector.py  split_by_mark.py  split_long_by_root.py
models/: .gitkeep
scripts/: build.ps1  build_backend.py  build_local.py  download_models.py  fix_duration.py
server/: database.py  main.py  models.py  schemas.py
server/routers/: audio.py  config.py
tests/: test_api.py
web/: build_log.txt  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/practice/: page.tsx
web/app/practice/[id]/: page.tsx
web/app/settings/: page.tsx
web/app/task-details/: page.tsx
web/app/tasks/: page.tsx
web/app/tasks/[id]/: page.tsx
web/components/: app-sidebar.tsx
web/components/providers/: api-provider.tsx
web/lib/: api.ts  types.ts
web/prisma/: schema.prisma
web/prisma/migrations/20251120140415_init/: migration.sql
web/prisma/migrations/20251120141233_add_practice_recording/: migration.sql
web/prisma/migrations/20251120162350_add_task_duration/: migration.sql
web/prisma/migrations/20251120172602_init_schema/: migration.sql
web/prisma/migrations/20251120173313_fix_schema/: migration.sql
web/prisma/migrations/20251120193230_add_last_played_chunk_index/: migration.sql
