[project]
name = "decho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "numpy>=2.3.5",
    "pip>=25.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sherpa-onnx>=1.12.17",
    "soundfile>=0.13.1",
    "streamlit>=1.51.0",
    "rich>=13.9.4",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "demucs>=4.0.1",
    "sounddevice>=0.5.3",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.0",
    "spacy>=3.7.0",
    "google-genai>=1.51.0",
    "pyinstaller>=6.11.1",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "mypy>=1.13.0",
    "black>=24.10.0",
]
